# bem3d

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  mkstatic  setup  static.txt
Data/: README
Data/CatsEye/: catseye.bc  catseye.bem  catseye.geo  catseye.msh  catseye.ref  index
Data/Configurations/: direct.cfg  sphere-helmholtz-gradient.cfg  sphere-helmholtz.cfg  sphere-laplace-gradient.cfg  sphere-laplace.cfg
Data/Functions/: compare-imag-vector.fn  flow-laplace-gradient.fn  flow-laplace.fn  gradient-helmholtz.fn  point-ref.fn  source-helmholtz.fn
Data/Geometries/: catseye.geo.in  peanut.geo.in
Data/Peanut/: peanut.bc  peanut.bem  peanut.geo  peanut.msh  peanut.ref
Data/Roberts/: pressure.fn  pressure.pos  roberts-1.edg  roberts-3.edg  roberts-4.edg  roberts.cfg  roberts.msh  roberts.mtn  roberts.pos  rr.msh  test.geo  wake.pos  wing.pos
Data/Sphere/: README  field-vis-a.msh  field-vis.msh  field.bem  field.msh  flow-grid.bem  flow-grid.geo  flow-grid.msh  flow-test-laplace  flow-vis.msh  point-test-helmholtz  point-test-laplace  sphere-admittance  sphere-grad.msh  sphere-vis.msh  sphere.bc  sphere.bem  sphere.cfg  sphere.msh  sphere.ref  sphere.xyz
Data/Tests/: README  sphere-test  test-all  test-errors  test-eval  test-init
Data/Weights/: extract.fn  local.fn  modes.fn  square.geo.in  square.msh
Tests/: errors.ref  test-errors  test-eval  test-init
Tests/CatsEye/: catseye.bc  catseye.bem  catseye.cfg  catseye.geo  catseye.geo.in  catseye.msh  catseye.ref
Tests/Functions/: abs-2.fn  diff-2.fn  isphere.fn  mesh-index.fn  plane-source.fn  point-ref.fn  point-source.fn
Tests/Roberts/: force.fn  pressure1.pos  reference.pos  roberts  roberts-0.edg  roberts-2.edg  roberts.bem  roberts.geo  roberts.xyz  tt  wing-1.pos
Tests/Scratch/: box-hole.bem  box-hole.geo  box-hole.msh  box-hole.pos  patch.bem  patch.geo  patch.msh  patch.pos  patch1.msh  quad.msh  square.geo  square.msh  square.pos
Tests/Sphere/: field-a.pos  field.bem  field.geo  (+6 more)
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
doc/: Makefile  Makefile.in  doxygen_sqlite3.db  html.tar
inputs/: aero.cfg
mpitools/: Makefile  Makefile.am  Makefile.in  bem3d-assemble.mpi  bem3d-pbs-launch  bem3d-pbs-run  bem3d-pbs-run.in  bem3d-solve.mpi
mpitools/.deps/: bem3d_assemble_mpi-bem3d-assemble.Po  bem3d_solve_mpi-bem3d-solve.Po
octave/: bemdat.m  bemedge.m  bemmtx.m  bemxyz.m  isphere.m  plane.xyz  sbessel1.m  sbessel2.m  shankel.m  sphscat.m  sptest.m
scratch/: admittance.fn  bcP.pos  bcR.pos  field-rect.msh  field-ring.msh  field.bem  micpos.xyz  naca.geo  plate.cfg  plate.geo  plateImp1.bem  plateImp1.geo  plateImp1.msh  plateImp1PA.pos  plateRec1.bem  plateRec1.geo  plateRec1.msh  plateRec1RA.pos  scatter1  source.fn
src/: Makefile  Makefile.am  Makefile.in  acoord.c  acoord.lo  belement.c  belement.lo  bem3d-config  bem3d-config.in  bem3d-private.h  bem3d.h  bem3d.txt  bem3dconfig.h  binomials.c  binomials.h  bmesh.c  bmesh.lo  cdjseval3d.lo  configure.c  configure.lo  cpanel.c  cpanel.lo  d3mtreeplot.lo  d3tstrcr.lo  data.c  dfft.lo  edge.c  elements.c  elements.lo  expansions.c  files.c  fmm.c  fmm.lo  fmmlib3d_1_2.c  fmmlib3d_1_2.h  fmmlib3d_1_2.lo  functions.c  geometry.c  geometry.lo  gfunc.c  (+78 more)
src/.deps/: acoord.Plo  belement.Plo  belement.Po  binomials.Plo  bmesh.Plo  bmesh.Po  configure.Plo  cpanel.Plo  data.Plo  edge.Plo  edge.Po  elements.Plo  expansions.Plo  files.Plo  fmm.Plo  fmmlib3d_1_2.Plo  functions.Plo  geometry.Plo  gfunc.Plo  gfunc.Po  gmsh.Plo  gradient.Plo  gradient.Po  hayami.Plo  htri-transforms.Plo  htriquad.Plo  intsincos.Plo  intsincos.Po  location.Plo  logging.Plo  lookup.Plo  matrix.Plo  motion.Plo  newman.Plo  operators.Plo  operators.Po  polar.Plo  polar.Po  qpanel.Plo  qselect.Plo  (+15 more)
src/.libs/: libbem3d-0.2.so.0  libbem3d-0.2.so.0.0.1  libbem3d.la  libbem3d.lai
src/RCS/: acoord.c,v  belement.c,v  bem3d-private.h,v  bem3d.h,v  bem3dconfig.h,v  binomials.c,v  binomials.h,v  bmesh.c,v  configure.c,v  cpanel.c,v  data.c,v  edge.c,v  elements.c,v  expansions.c,v  files.c,v  fmm.c,v  fmmlib3d_1_2.c,v  fmmlib3d_1_2.h,v  functions.c,v  geometry.c,v  gfunc.c,v  gmsh.c,v  gradient.c,v  htri-transforms.c,v  htriquad.c,v  htriquad.h,v  intsincos.c,v  location.c,v  logging.c,v  lookup.c,v  matrix.c,v  motion.c,v  newman.c,v  operators.c,v  polar.c,v  polar.h,v  qpanel.c,v  qselect.c,v  quadrature.c,v  radiation.c,v  (+8 more)
tests/: absolute.fn  compare-imag.fn  compare-real-vector.fn  compare-real.fn  gradient-laplace.fn  point-test-helmholtz  point-test-laplace  source-helmholtz.fn  source-laplace.fn  sphere-field.bem  sphere.bem
tools/: Makefile  Makefile.am  Makefile.in  bem3d-aero  bem3d-aero.c  bem3d-assemble  bem3d-assemble.c  bem3d-boundary  bem3d-boundary.c  bem3d-configuration  bem3d-configuration.c  bem3d-dump  bem3d-dump.c  bem3d-field  bem3d-field.c  bem3d-function  bem3d-function.c  bem3d-plane  bem3d-plane.c  bem3d-skeleton  bem3d-skeleton.c  bem3d-solve  bem3d-solve.c  bem3d-source  bem3d-source.c  bem3d-sphere  bem3d-sphere.c  bem3d2msh  bem3d2msh.c  bem3d2pos  bem3d2pos.c  gts2bem3d  gts2bem3d.c  msh2bem3d  msh2bem3d.c  notice.txt  tools.h
tools/.deps/: bem3d-assemble.Po  bem3d-boundary.Po  bem3d-configuration.Po  bem3d-dump.Po  bem3d-field.Po  bem3d-function.Po  bem3d-math.Po  bem3d-plane.Po  bem3d-process.Po  bem3d-skeleton.Po  bem3d-source.Po  bem3d-sphere.Po  bem3d2msh.Po  bem3d2pos.Po  bem3d_aero-bem3d-aero.Po  bem3d_assemble-bem3d-assemble.Po  bem3d_solve-bem3d-solve.Po  bem3d_solve_fmm-bem3d-solve-fmm.Po  gts2bem3d.Po  msh2bem3d.Po
tools/RCS/: bem3d-assemble.c,v  bem3d-boundary.c,v  bem3d-dump.c,v  bem3d-field.c,v  bem3d-plane.c,v  bem3d-process.c,v  bem3d-solve.c,v  bem3d-source.c,v  bem3d-sphere.c,v  bem3d2pos.c,v  gts2bem3d.c,v  msh2bem3d.c,v  tools.h,v
(+417 files in other folders)
